html/StyleSheets/common.css
/* Common style sheet to be used for all pages. 
   Created 1/2004 by rjp. */

   
/*	note, this defines the defaults for the document unless 
	they are overridden by something more specific */
body {
	background-color: WhiteSmoke;
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 0.85em;
	margin-bottom: 0px;
	margin-top: 0px;
	margin-right: 0px;
	margin-left: 0px;
}

table, tbody, tr, td, th { 
	font-size: 1em;
}

th {
    font-weight: normal;
}

hr { 
    color: #AAAAAA;
    background-color: #AAAAAA;
    width: 100%;
    height: 1px;
    border: 0;
}

/* how should the regular links look? */
A:link	{ color : #0030D0; text-decoration:none; }
A:visited	{ color : #6E00FF; text-decoration:none; }
A:active	{ color : #00AAFF; text-decoration:none; }
A:hover	{ color : #C80078; text-decoration:none; }

.mockLink	{
	color : #0030D0; text-decoration:none;
}

/* how should the links look in the menu bar at the top?  */
A:link.menu { 
	color : white; font-size : 0.85em; text-decoration:none; 
	padding: 2px 5px 2px 5px;
}

A:visited.menu { 
	color : white; font-size : 0.85em; text-decoration:none; 
	padding: 2px 5px 2px 5px;
}

A:active.menu { 
	color : white; font-size : 0.85em; text-decoration:none; 
	padding: 2px 5px 2px 5px;
}

A:hover.menu { 
	color : black; font-size : 0.85em; 
	border: 0px solid white;
	/* top, right, bottom, left*/
	padding: 2px 5px 2px 5px;
	text-decoration:none; 
}

.homeBodyLinks a:link { color: goldenrod; }
.homeBodyLinks a:visited { color: goldenrod; }
.homeBodyLinks a:active { color: lightcoral; }
.homeBodyLinks a:hover { color: lightcoral; }
a:link.homeBodyLinks { color: goldenrod; }
a:visited.homeBodyLinks { color: goldenrod; }
a:active.homeBodyLinks { color: lightcoral; }
a:hover.homeBodyLinks { color: lightcoral; }

A:link.boring	{
	color : #7070FF;
}       

A:hover.boring	{
	color : #C80078;
}       

H1, H2, H3, H4, H5, H6 { 
	padding: 0px 0px 0px 0px;
	/*margin: 0.1em 1em 0.5em 1em;*/
}

H1 {font-size: 2em;}
H2 {font-size: 1.5em;}
H3 {font-size: 1.25em;}
H4 {font-size: 1.1em;}
H5 {font-size: 1em;}
H6 {font-size: .9em;}

.verytiny {  font-size : 0.7em; text-decoration:none; }
.tiny {  font-size : 0.8em; text-decoration:none; }
.verysmall {  font-size : 0.85em; text-decoration:none; }
.small {  font-size : 0.9em; text-decoration:none; }
.medium {  font-size : 1.0em; text-decoration:none; }
.large {  font-size : 1.1em; text-decoration:none; }
.verylarge {  font-size : 1.2em; text-decoration:none; }
.huge {  font-size : 1.3em; text-decoration:none; }
.veryhuge {  font-size : 1.5em; text-decoration:none; }
.cell {  font-size : 1.1em; text-decoration:none; }
.blue {  font-size : .85em; color : #0040FF; text-decoration:none; }

.pageTitle	{
	font-size: 1.3em;
        margin-top: 1em;
	margin-bottom: 1.5em;
}

.fieldName	{
	color: #404040;
}

.prompt	{
	color: #404040;
}

/* the menu at the top and bottom of each page. */
.menu {
	color: white;
}

.indentNext {
    text-indent: -1em; 
    margin-left: 1em; 
    margin-top: 0.15em; 
    margin-bottom: 0;
}

.container	{
    text-align: center;
}

#mainBody	{
    position: absolute;
    top: 0px;
    left: 0px;
    width: 59em;
    height: 100%;
    padding-top: 2em;
    padding-left: 1em;
    margin-left: 1em; 
    margin-right: 1em;
    padding-bottom: -1em;
    background-color: white;
    border: 1px solid lightgray;
    z-index: 1;
}

.mainBodyGuest {
    width: 60em;
    height: 100%;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
    background-color: white;
    border-left: 1px solid DarkGray;
    border-right: 1px solid DarkGray;
    text-align: left;
}

.bannerSpacer	{
 /* need align and width to roughly center the page contents below the banner */
    position: absolute;
    top: 55px;
    width: 58em;
    padding-top: 2em;
    padding-left: 1em;
    padding-right: 1em;
    z-index: 1;
}

#homeBanner	{
    min-width: 52em; /* needed because scrolling across when a window is small
                          causes the image to be truncated */

    position: absolute;
    top: 0px;
    margin-left: 8em;
    height: 50px;
    width: 52em;
    text-align: center;
    border-right: 1px solid DarkGray;
    z-index: 8;
}

#homeLinks	{
    min-width: 52em; /* needed because scrolling down when a window is small
                          causes the image to be truncated */
    position: absolute;
    top: 50px;
    margin-left: 8em;
    z-index: 8; 
    height: 2em;
    width: 52em;
    border-right: 1px solid DarkGray;
}

#homeLinksMenu {
    height: 2em;
    width: 52em;
    position: relative;
    left: 8em;
    top: 0px;
    text-align: center;
    z-index: -1;
    border-right: 1px solid lightgray;
}

.corner	{
    background-color: #191970;
}

.sides	{
    background-color: #4169E1;
}

.homeBodyGuest	{
    position: relative;
  /* counteracts left and right padding of mainBodyGuest */
    margin-top: -0.5em;
    margin-left: -1em;
    margin-right: -1em;
    padding-bottom: 0em;
    z-index: 3;
}

.leftBar	{
    position: relative;
    float: left;
    clear: left;
    height: 45em;
    width: 8em;
    margin: 0em;
    background-color: #4169E1;
/* required by IE */
    overflow: auto;
}

.leftBar a:link { color: white; }
.leftBar a:visited { color: white; }
.leftBar a:hover { color: gold; }
.leftBar a:active { color: gold; }


.leftBarSection	{
    display: inline;
    position: relative;
    float: left;
    clear: both;
    width: 8em;
    padding-bottom: 0.5em;
    border-bottom: 1px solid #191970;
    overflow: hidden;
}

.plusMinus	{
    display: inline;
    position: relative;
    float: left;
    clear: left;
    margin-left: 0.5em;
    margin-right: 0.4em;
    margin-top: 0.8em;
    font-family: Monaco;
    color: white;
}

.leftBarHeader	{
    display: inline;
    position: relative;
    float: left;
    clear: right;
    margin-top: 1em;
    margin-bottom: 0.75em;
    font-size: 0.9em;
    color: white;
}
/* ... */

